<?xml version="1.0"?>
<package>
  <name>or_sbpl</name>
  <version>0.0.1</version>
  <description>
    OpenRAVE bindings for SBPL.
  </description>
  <url type="repository">https://svn.personalrobotics.ri.cmu.edu/pr-ros-pkg/trunk/or_plugins/or_sbpl</url>
  <maintainer email="jeking@cs.cmu.edu">Jennifer King</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openrave</build_depend>
  <build_depend>sbpl</build_depend>
  <run_depend>openrave</run_depend>
  <run_depend>sbpl</run_depend>
</package>
